Fixed the display of error messages in myaccount.

--- a/themes/phoenix/templates/myresearch/checkedout.phtml
+++ b/themes/phoenix/templates/myresearch/checkedout.phtml
@@ -53,7 +53,6 @@
       <? endforeach; ?>
 
       <? $i = 0; foreach ($this->transactions as $resource): ?>
-        <hr/>
         <? $ilsDetails = $resource->getExtraDetail('ils_details'); ?>
         <div id="record<?=$this->escapeHtmlAttr($resource->getUniqueId())?>" class="row result">
           <? if ($this->renewForm): ?>
@@ -122,7 +121,7 @@
               <br />
             <? endif; ?>
  
-            <? $showStatus = true; ?>
+            <? $showStatus = false; ?>
 
             <?
               $duedate = $ilsDetails['duedate'];
@@ -135,14 +134,12 @@
               <? $renewDetails = $this->renewResult[$ilsDetails['item_id']]; ?>
               <? if (isset($renewDetails['success']) && $renewDetails['success']): ?>
                 <? $showStatus = false; ?>
-                <strong><?=$this->transEsc('Due Date')?>: <?=$this->escapeHtml($renewDetails['new_date'])?> <? if (isset($renewDetails['new_time'])): ?><?=$this->escapeHtml($renewDetails['new_time'])?><? endif; ?></strong>
-                <div class="alert alert-success"><?=$this->transEsc('renew_success')?></div>
+                <strong class="due-date"><?=$this->transEsc('Due Date')?>: <?=$this->escapeHtml($renewDetails['new_date'])?> <? if (isset($renewDetails['new_time'])): ?><?=$this->escapeHtml($renewDetails['new_time'])?><? endif; ?></strong>
               <? else: ?>
-                <strong><?=$this->transEsc('Due Date')?>: <?=$this->escapeHtml($duedate)?><? if (isset($ilsDetails['dueTime'])): ?> <?=$this->escapeHtml($ilsDetails['dueTime'])?><? endif; ?></strong>
-                <div class="alert alert-danger"><?=$this->transEsc('renew_fail')?><? if (isset($renewDetails['sysMessage'])): ?>: <?=$this->escapeHtml($renewDetails['sysMessage'])?><? endif; ?></div>
+                <strong class="due-date"><?=$this->transEsc('Due Date')?>: <?=$this->escapeHtml($duedate)?><? if (isset($ilsDetails['dueTime'])): ?> <?=$this->escapeHtml($ilsDetails['dueTime'])?><? endif; ?></strong>
               <? endif; ?>
             <? else: ?>
-              <strong><?=$this->transEsc('Due Date')?>: <?=$this->escapeHtml($duedate)?><? if (isset($ilsDetails['dueTime'])): ?> <?=$this->escapeHtml($ilsDetails['dueTime'])?><? endif; ?></strong>
+              <strong class="due-date"><?=$this->transEsc('Due Date')?>: <?=$this->escapeHtml($duedate)?><? if (isset($ilsDetails['dueTime'])): ?> <?=$this->escapeHtml($ilsDetails['dueTime'])?><? endif; ?></strong>
             <? endif; ?>
 
             <? if (isset($ilsDetails['renewable']) && $ilsDetails['renewable'] && isset($ilsDetails['renew_link'])): ?>
@@ -172,6 +169,17 @@
               <br />
             <? endif; ?>
           </div><? /* end col */ ?>
+
+            <? if (isset($this->renewResult[$ilsDetails['item_id']])): ?>
+             <? $renewDetails = $this->renewResult[$ilsDetails['item_id']]; ?>
+             <? if (isset($renewDetails['success']) && $renewDetails['success']): ?>
+                <? $showStatus = false; ?>
+                <div class="col-xs-12 col-sm-10 alert alert-success"><?=$this->transEsc('renew_success')?></div>
+              <? else: ?>
+                <div class="col-xs-12 col-sm-10 alert alert-danger"><?=$this->transEsc('renew_fail')?><? if (isset($renewDetails['sysMessage'])): ?>: <?=$this->escapeHtml($renewDetails['sysMessage'])?><? endif; ?></div>
+              <? endif; ?>
+           <? endif; ?>
+
           <? if ($showStatus): ?>
             <? if (isset($ilsDetails['dueStatus']) && $ilsDetails['dueStatus'] == "overdue"): ?>
               <div class="col-xs-12 col-sm-10 alert alert-danger"><?=$this->transEsc("renew_item_overdue")?></div>
