Fixed a css bug with form inputs.

--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -257,7 +257,7 @@ div.searchForm p {
     cursor: pointer;
     font-size: @clear-input-size;
     color: lighten(@gray-light, 10%);
-    margin-left: -(@form-control-padding * 2) - 4;
+    margin-left: -@form-control-padding - 3;
     margin-top: (@input-height-base / 2) - (@clear-input-size / 2);
     @media (max-width: @screen-sm-min) {
         display: none;
