Bug #17640. Updated requested items message.

--- a/themes/phoenix/templates/myresearch/holds.phtml
+++ b/themes/phoenix/templates/myresearch/holds.phtml
@@ -133,7 +133,7 @@
       <? endforeach; ?>
       </form>
     <? else: ?>
-      <?=$this->transEsc('You do not have any holds or recalls placed') ?>.
+      <?=$this->transEsc('You have no outstanding requests') ?>.
     <? endif; ?>
   </div>
 
