Added some space between links on advanced search.

--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -431,6 +431,7 @@ body.phoenix .group {
 }
 .searchPlaceHolder a {
     color: #5c5c5c;
+    margin-right: 1em;
 }
 .basicSearch {
     #groupJoin, .search_bool, .search .delete, #group0Holder, .searchPlaceHolder, #groupPlaceHolder, .advancedSearchBtn, #advSearchLimits, #publishDate {
@@ -451,6 +452,7 @@ body.phoenix #groupPlaceHolder {
   padding: 0;
   a {
     color: #5c5c5c;
+    margin-right: 1em;
   }
 }
 #limit_language,
