--- a/themes/phoenix/templates/search/advanced/layout.phtml
+++ b/themes/phoenix/templates/search/advanced/layout.phtml
@@ -94,7 +94,7 @@
         <? endif; ?>
           <input type="hidden" name="sort" value="relevance">
           <div class="clearfix">
-            <div id="groupJoin" class="form-inline pull-right hidden">
+            <div id="groupJoin" class="form-inline hidden">
               <label for="groupJoinOptions"><?=$this->transEsc("search_match")?>:</label>
               <select id="groupJoinOptions" name="join" class="form-control">
                 <option value="AND"<? if($searchDetails && $searchDetails->getOperator()=='ALL'):?> selected<?endif?>><?= $this->transEsc('group_AND') ?></option>
