--- a/themes/phoenix/templates/myresearch/checkedout.phtml
+++ b/themes/phoenix/templates/myresearch/checkedout.phtml
@@ -27,8 +27,13 @@
         <input id="checked_out_items_sort_field" type="hidden" name="sort" value="<?=$this->sort; ?>"/>
         <div class="toolbar">
           <div class="checkbox">
+             <label>
+               <input type="checkbox" class="checkbox-select-all" name="selectAll" id="<?=$this->idPrefix?>addFormCheckboxSelectAll"/>
+               <span>Select all</span>
+             </label>
             <input type="submit" class="btn btn-default" id="renewSelected" name="renewSelected" value="<?=$this->transEsc("renew_selected")?>" />
             <input type="submit" class="btn btn-default" id="renewAll" name="renewAll" value="<?=$this->transEsc('renew_all')?>" />
+            <a href="#" onclick="window.print();return false;"><button class="btn btn-default" type="button">Print</button></a>
           </div>
         </div>
       <? endif; ?>
