Made requests sortable by the hold until date.

--- a/themes/phoenix/templates/myresearch/holds.phtml
+++ b/themes/phoenix/templates/myresearch/holds.phtml
@@ -22,7 +22,7 @@
               'author' => 'Author',
               'callNumber' => 'Call Number',
               'itemStatus' => 'Item Status',
-              'holdExpirationDate' => 'On Hold Expiration Date'
+              'holdExpirationDate' => 'On Hold Until Date'
             ];
           ?>
           <span class="dropdown">
@@ -32,7 +32,7 @@
               <li><a href="/vufind/MyResearch/Holds?sort=author">Author</a></li>
               <li><a href="/vufind/MyResearch/Holds?sort=callNumber">Call Number</a></li>
               <li><a href="/vufind/MyResearch/Holds?sort=itemStatus">Item Status</a></li>
-              <li><a href="/vufind/MyResearch/Holds?sort=holdExpirationDate">On Hold Expiration Date</a></li>
+              <li><a href="/vufind/MyResearch/Holds?sort=holdExpirationDate">On Hold Until Date</a></li>
             </ul>
           </span>
         </div>
