Chaged title and header text.

--- a/themes/phoenix/templates/myresearch/storagerequest.phtml
+++ b/themes/phoenix/templates/myresearch/storagerequest.phtml
@@ -1,10 +1,10 @@
 <?
     // Set up page title:
-    $this->headTitle('Mansueto Requests');
+    $this->headTitle('Mansueto Cart');
 
 ?>
 <div class="<?=$this->layoutClass('mainbody')?>">
-    <h2>Mansueto Requests</h2>
+    <h2>Mansueto Cart</h2>
     <?=$this->flashmessages()?>
 
     <? if (empty($this->storagerequests)): ?>
