Minor tweaks to alert css and js.

--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -1364,7 +1364,7 @@ a.tool:hover .arrow-left {
     text-align: center;
     background:#FFB547;
     color:@brand-primary-dark;
-    p {
+    p, h2, h3, h4, h5 {
         display: inline;
     }
     a {
