--- a/themes/phoenix/templates/ajax/resolverLinks.phtml
+++ b/themes/phoenix/templates/ajax/resolverLinks.phtml
@@ -28,7 +28,7 @@
     </div>
   <? endif; ?>
   <div class="openurls">
-    <strong><a href="<?=$this->escapeHtmlAttr($this->openUrlBase)?>?<?=$this->escapeHtmlAttr($this->openUrl)?>"><img src="/vufind/themes/phoenix/images/sfx.png" alt="Find It" class="findit" /></a></strong>
+    <? if (!empty($this->moreOptionsLink)): ?><strong><a href="<?=$this->escapeHtmlAttr($this->moreOptionsLink)?>"><img src="/vufind/themes/phoenix/images/sfx.png" alt="Find It" class="findit" /></a></strong><?endif; ?>
     <? if (!empty($this->services)): ?>
       <ul>
         <? foreach ($this->services as $link): ?>
