--- a/themes/phoenix/templates/layout/layout.phtml
+++ b/themes/phoenix/templates/layout/layout.phtml
@@ -65,6 +65,12 @@
               'VuFind.cart.setDomain("' . $domain . '");'
             );
           }
+          $cookiePath = $cart->getCookiePath();
+          if (!empty($cookiePath)) {
+            $this->headScript()->appendScript(
+              'VuFind.cart.setCookiePath("' . $cookiePath . '");'
+            );
+          }
           $this->jsTranslations()->addStrings(
             [
               'addBookBag' => 'Add to Book Bag',
